--- a/src/main/webapp/main.css
+++ b/src/main/webapp/main.css
@@ -1,18 +1,18 @@
-  .material-icons {
+.material-icons {
     margin-left: 20px;
     font-size: 30px;
   }
-
+  
   @media only screen and (max-width: 640px) {
     #Recherche {
       display: none;
     }
   }
-
+  
   body {
     min-width: 400px;
   }
-
+  
   .unselectable {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -21,13 +21,13 @@
     -ms-user-select: none;
     user-select: none;
   }
-
+  
   .iconProfile {
     border-radius: 50%;
     width: 28px;
     height: 28px;
   }
-
+  
   .centered {
     position: fixed;
     top: 50%;
@@ -35,28 +35,28 @@
     /* bring your own prefixes */
     transform: translate(-50%, -50%);
   }
-
+  
   .centered-width {
     position: fixed;
     left: 50%;
     /* bring your own prefixes */
     transform: translate(-50%, 0%);
   }
-
+  
   .onTop {
     z-index: 1022;
   }
-
+  
   .overlayDiv {
     width: 85%;
     height: 85%;
   }
-
+  
   .overlayContainer {
     width: 92%;
     height: 92%;
   }
-
+  
   .fondTransparent {
     background-color: black;
     width: 100%;
@@ -65,57 +65,54 @@
     opacity: 0.5;
     z-index: 1021;
   }
-
+  
   .textArea {
     border: none;
     background-color: transparent;
     resize: none;
     outline: none;
   }
-
+  
   .postsProfilePicture {
     padding-right: 1%;
     padding-left: 1%;
     margin-top: 1%;
     margin-bottom: 1%;
   }
-
+  
   .card {
-    box-shadow: 0 6px 10px rgba(0, 0, 0, .08), 0 0 6px rgba(0, 0, 0, .05);
-    transition: .3s transform cubic-bezier(.155, 1.105, .295, 1.12), .3s box-shadow, .3s -webkit-transform cubic-bezier(.155, 1.105, .295, 1.12);
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08), 0 0 6px rgba(0, 0, 0, 0.05);
+    transition: 0.3s transform cubic-bezier(0.155, 1.105, 0.295, 1.12),
+      0.3s box-shadow,
+      0.3s -webkit-transform cubic-bezier(0.155, 1.105, 0.295, 1.12);
     cursor: pointer;
   }
-
+  
   .card:hover {
     transform: scale(1.05);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
   }
-
+  
   .hide {
     display: none;
   }
-
-  .unPost:hover + .hide{
+  
+  .unPost:hover + .hide {
     display: block;
   }
-
+  
   .centeredOn {
     margin: auto;
     width: 50%;
     transform: translate(7%, -200%);
   }
-
-  .likeStyle{
+  
+  .likeStyle {
     flex-direction: column;
     justify-content: center;
     position: absolute;
   }
-
-
-
-
-
-
+  
   .body {
     position: relative;
     width: 720px;
@@ -126,33 +123,33 @@
     overflow: hidden;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-
-.box-1 img {
+  }
+  
+  .box-1 img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-
-.box-2 {
+  }
+  
+  .box-2 {
     padding: 10px;
-}
-
-.box-1,
-.box-2 {
+  }
+  
+  .box-1,
+  .box-2 {
     width: 50%;
-}
-
-.h-1 {
+  }
+  
+  .h-1 {
     font-size: 24px;
     font-weight: 700;
-}
-
-.text-muted {
+  }
+  
+  .text-muted {
     font-size: 14px;
-}
-
-.container .box {
+  }
+  
+  .container .box {
     width: 100px;
     height: 100px;
     display: flex;
@@ -162,38 +159,38 @@
     border: 2px solid transparent;
     text-decoration: none;
     color: #615f5fdd;
-}
-
-.box:active,
-.box:visited {
+  }
+  
+  .box:active,
+  .box:visited {
     border: 2px solid #ee82ee;
-}
-
-.box:hover {
+  }
+  
+  .box:hover {
     border: 2px solid #ee82ee;
-}
-
-.btn.btn-primary {
+  }
+  
+  .btn.btn-primary {
     background-color: transparent;
     color: #ee82ee;
     border: 0px;
     padding: 0;
     font-size: 14px;
-}
-
-.btn.btn-primary .fas.fa-chevron-right {
+  }
+  
+  .btn.btn-primary .fas.fa-chevron-right {
     font-size: 12px;
-}
-
-.footer .p-color {
+  }
+  
+  .footer .p-color {
     color: #ee82ee;
-}
-
-.footer.text-muted {
+  }
+  
+  .footer.text-muted {
     font-size: 10px;
-}
-
-.fas.fa-times {
+  }
+  
+  .fas.fa-times {
     position: absolute;
     top: 20px;
     right: 20px;
@@ -204,28 +201,85 @@
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.fas.fa-times:hover {
+  }
+  
+  .fas.fa-times:hover {
     color: #ff0000;
-}
-
-@media (max-width:767px) {
+  }
+  
+  @media (max-width: 767px) {
     body {
-        padding: 10px;
+      padding: 10px;
     }
-
+  
     .body {
-        width: 100%;
-        height: 100%;
+      width: 100%;
+      height: 100%;
     }
-
+  
     .box-1 {
-        width: 100%;
+      width: 100%;
     }
-
+  
     .box-2 {
-        width: 100%;
-        height: 440px;
+      width: 100%;
+      height: 440px;
     }
-}
+  }
+  
+  /* a propos page */
+  .apropos.police {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+  }
+  
+  .apropos.column {
+    float: left;
+    width: 33.3%;
+    margin-bottom: 16px;
+    padding: 0 8px;
+  }
+  
+  .apropos.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    margin: 8px;
+  }
+  
+  .apropos.about-section {
+    padding: 50px;
+    text-align: center;
+    background-color: #474e5d;
+    color: white;
+  }
+  
+  .apropos.container {
+    padding: 0 16px;
+  }
+  
+  .apropos.container::after,
+  .apropos.row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  
+  .apropos.title {
+    color: grey;
+  }
+  
+  .apropos.button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+  }
+  
+  .apropos.button:hover {
+    background-color: #555;
+  }
+  
